--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1>A Little More <span>About Me...</span></h1>
             <p class="para">- I Made Only 100% Responsive Website</p>
             <p class="para">- I Love Coding and Doing Stuff Like This</p>
-            <p class="para">- I Work Well in a Group</p>
+            <p class="para">- I Work Well in a Group / Team</p>
         </div>
     </div>
 
