--- a/index.html
+++ b/index.html
@@ -125,22 +125,23 @@
             <h2>Social <span>Media</span></h2>
             <ul>
                 <li>
-                    <a href="#">Instagram</a>
+                    <a href="https://www.instagram.com/">Instagram</a>
                 </li>
                 <li>
-                    <a href="#">Github</a>
+                    <a href="https://github.com/S0dxu">Github</a>
                 </li>
                 <li>
-                    <a href="#">LinkedIn</a>
+                    <a href="https://www.linkedin.com/">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="#">Discord</a>
+                    <a href="https://discord.com/">Discord</a>
                 </li>
                 <li>
-                    <a href="#">Facebook</a>
+                    <a href="https://www.facebook.com/">Facebook</a>
                 </li>
             </ul>
         </div>
+        
         
         <div class="social">
             <div class="return">
