--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
             <h2>Social <span>Media</span></h2>
             <ul>
                 <li>
-                    <a href="https://www.instagram.com/">Instagram</a>
+                    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
                 </li>
                 <li>
-                    <a href="https://github.com/S0dxu">Github</a>
+                    <a href="https://github.com/S0dxu" target="_blank">Github</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="https://discord.com/">Discord</a>
+                    <a href="https://discord.com/" target="_blank">Discord</a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/">Facebook</a>
+                    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
                 </li>
             </ul>
         </div>
